# python-cfg_diag

./: .editorconfig  CONTRIBUTING.md  LICENSE  MANIFEST.in  NEWS.md  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
nix/: python-pytest.nix  python-tox.nix
src/cfg_diag/: __init__.py
unit_tests/: test_cfg.py  test_cfg_diag.py
