[metadata]
name = cfg_diag
version= attr: cfg_diag.VERSION
author = Peter Pentchev
author_email = support@storpool.com
description = A common configuration-storage class with a .diag() method
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2
keywords = version
url = https://github.com/storpool/python-cfg_diag
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: DFSG approved
    License :: Freely Distributable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
package_dir =
    = src
packages =
    cfg_diag
setup_requires =
install_requires =

[options.package_data]
cfg_diag =
    py.typed

[flake8]
max_line_length = 100
